# back_project

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.claude/agents/: developer.md  security.md  tester.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/core/: config.py  error_handlers.py  exceptions.py  rate_limit.py
app/db/: session.py
app/es/: client.py  mapping.py
app/llm/: dependencies.py  exceptions.py  gateway.py
app/parsers/: __init__.py  base.py  exceptions.py  file_parser.py  registry.py  schemas.py
migrations/: env.py
migrations/versions/: 2026_04_22_1023-ca22895b531d_add_search_court_decisions_participants_.py  2026_04_23_1100-0cdfccfdba0a_align_court_decisions_with_v1_1_contract.py  2026_04_27_1520-a13c4be8b932_create_cases_and_link_court_decisions.py
scripts/: ensure_es_index.py  rebase-stack.sh  reindex_es.py  seed_decisions.py
scripts/seed/: 01_arbitr_postavka_satisfied.json  02_arbitr_bankruptcy_partial.json  03_arbitr_spb_postavka_denied.json  04_arbitr_ekb_nalog_satisfied.json  05_arbitr_novosib_uslugi_partial.json  06_arbitr_kaz_appeal_overturned.json  07_arbitr_moscow_arenda_upheld.json  08_arbitr_rostov_podryad_denied.json  (+5 more)
tests/: conftest.py  test_case_repository.py  test_error_handlers.py  test_es_client.py  test_es_index.py  test_llm_summary.py  test_main.py  test_nlq.py  test_rate_limit.py  test_reindex_es.py  test_search_decisions.py  test_search_decisions_facets.py  test_search_decisions_query.py  test_search_ingest.py
(+61 files in other folders)
